k8s/k8s-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server-manager
  name: server-manager
  annotations: null
spec:
  ports:
    - name: frontend
      port: 80
      targetPort: 8772
      protocol: TCP
    - name: http-api
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: server-http
      port: 9600
      targetPort: 9600
      protocol: TCP
    - name: server-udp
      port: 9601
      targetPort: 9601
      protocol: UDP
  selector:
    app: server-manager
  type: NodePort
